[gd_scene load_steps=2 format=3 uid="uid://cgkmplmhercyk"]

[ext_resource type="Script" uid="uid://bqv8jhbx620go" path="res://scripts/ui/menu/settings.gd" id="1_rqcjd"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rqcjd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(200, 250)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -125.0
offset_right = 100.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HBoxContainer_Music" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer_Music"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = "Music"

[node name="HSlider" type="HSlider" parent="VBoxContainer/HBoxContainer_Music"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0

[node name="HBoxContainer_Clicks" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer_Clicks"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = "Clicks"

[node name="HSlider" type="HSlider" parent="VBoxContainer/HBoxContainer_Clicks"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0

[node name="HBoxContainer_Amb" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer_Amb"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = "Amb"

[node name="HSlider" type="HSlider" parent="VBoxContainer/HBoxContainer_Amb"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0

[node name="HBoxContainer_SFX" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer_SFX"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = "SFX"

[node name="HSlider" type="HSlider" parent="VBoxContainer/HBoxContainer_SFX"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0

[node name="HBoxContainer_Alarm" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer_Alarm"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = "Alarm"

[node name="HSlider" type="HSlider" parent="VBoxContainer/HBoxContainer_Alarm"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0

[node name="OptionButton" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
item_count = 3
popup/item_0/text = "Windowed"
popup/item_0/id = 0
popup/item_1/text = "Windowed fullscreen"
popup/item_1/id = 1
popup/item_2/text = "fullscreen"
popup/item_2/id = 2

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Button_savefldr" type="Button" parent="VBoxContainer/CenterContainer"]
layout_mode = 2
text = "open save folder"

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/CenterContainer2"]
layout_mode = 2
text = "back"

[connection signal="item_selected" from="VBoxContainer/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/Button_savefldr" to="." method="_on_button_savefldr_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer2/Button" to="." method="_on_button_pressed"]
